tests/NormalTests/paczka1/fuzzy1/10915110.err
Error in line 7: S354 S713 -1,2
Error in line 4: udbT9nA S713 25,3
Error in line 5: S354 S713 13,9
Error in line 33: S354 A779 47,5
Error in line 38: LS1w S71E 66,8
Error in line 18: fpsW A779 79,3
